# period-tracker

./: .editorconfig  .env.sample  .env.test  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: qa-testing.yml
.github/workflows/setup/: action.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  tox.ini
backend/alembic/: env.py
backend/alembic/versions/: 1765487528-dae140842fb9_initial_migration.py  1765671529-c5efd9a98e17_initial.py  1766094609-a953c1d44d18_initial_models.py  1766439378-ea0dd4c28826_.py  1766520853-5e40f00805be_.py  1766784123-a9b6b9802394_.py  1766867205-36e997c57513_.py  1767028260-a884a2645893_.py
backend/api/: backend_pre_start.py  initial_data.py  main.py
backend/api/db/: models.py  session.py
backend/api/db/crud/: period.py  symptoms.py  temperature.py  user.py
backend/api/routers/: auth.py  period.py  symptoms.py  temperature.py  users.py
backend/api/utils/: __init__.py  auth.py  config.py  dependencies.py  redis_client.py  stats.py
backend/scripts/: prestart.sh
backend/tests/: conftest.py  test_auth.py  test_main.py  test_periods.py  test_stats.py  test_symptoms.py  test_temperatures.py  test_users.py  utils.py
backend/tests/utils/: 1766502524-d7bd19e54f39_.py  __init__.py  auth.py  events.py  temp.py  testing.py  user.py
client/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
notes/: Period Symptom Tracker DIY Template.ods  TODO.md  testing.py  🔴 Period Tracker.ods
server/: Dockerfile  alembic.ini  pyproject.toml  tox.ini
server/alembic/: script.py.mako
server/alembic/versions/: 1765309104-340923c6ce5a_initial.py
server/api/: main.py
server/api/db/: models.py  session.py
server/api/db/crud/: users.py
server/api/db/models/: __init__.py  token.py  user.py
server/api/routers/: items.py  users.py
server/api/utils/: config.py  dependencies.py
server/tests/: test_main.py  test_sample.py  test_users.py
