[project]
name = "server"
version = "0.1.0"
description = "A period tracker for people who menstruate, don't like android apps, and have a home docker box. Backend server."
authors = [{ name = "Respheal", email = "madeleine.ethridge@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli] (>=0.124.0,<0.125.0)",
    "alembic[tz] (>=1.17.2,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "redis (>=7.1.0,<8.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.server.dependencies]
uvicorn = "^0.38.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
flake8-bugbear = "^25.11.29"
mypy = "^1.19.0"
black = "^25.12.0"
isort = "^7.0.0"
ruff = "^0.14.8" # for CI only

[tool.poetry.group.security.dependencies]
bandit = "^1.9.2"
pip-audit = "^2.10.0"

[tool.poetry.group.tox.dependencies]
tox = "^4.32.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-dotenv = "^0.5.2"
httpx = "^0.28.1"
fakeredis = "^2.32.1"
pytest-env = "^1.2.0"
coverage = "^7.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Tool Configs

[tool.bandit]
exclude_dirs = ["tests"]

[tool.isort]
profile = "black"
known_third_party = ["alembic"]

[tool.black]
line-length = 90

[tool.ruff]
line-length = 90

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
strict = true
packages = "api"
exclude = ["alembic", "tests"]
show_error_context = true
explicit_package_bases=false

[tool.pytest]
minversion = "9.0"
addopts = ["--no-header", "-vv", "--color=yes", "--cache-clear"]
testpaths = ["tests"]
# filterwarnings = ["ignore::DeprecationWarning"]
env = ["ENVIRONMENT = test"] # triggers alembic to read .env.test in test mode
env_files = [".env.test"]

[tool.coverage.run]
branch = true
source = ["api"]
omit = [
    "*__init__.py",
    "alembic/*",
    "tests/*",
    "api/backend_pre_start.py",
    "api/initial_data.py",
]

[tool.coverage.report]
omit = [
    "*__init__.py",
    "alembic/*",
    "tests/*",
    "api/backend_pre_start.py",
    "api/initial_data.py",
]
